Non-painting fixed elements should not cause repaints on scroll https://bugs.webkit.org/show_bug.cgi?id=110430

Reviewed by Simon Fraser.

Source/WebCore:

Test: compositing/repaint/scroll-fixed-layer-no-content.html
Test: compositing/repaint/scroll-fixed-layer-out-of-view.html

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsFastPath): Check for no-content and out-of-view flag set by RLC.
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForPosition): Moved the check for no-content above out-of-view because it's faster.

LayoutTests:

* compositing/repaint/scroll-fixed-layer-no-content.html: Added.
* compositing/repaint/scroll-fixed-layer-no-content-expected.txt: Added.
* compositing/repaint/scroll-fixed-layer-out-of-view.html: Added.
* compositing/repaint/scroll-fixed-layer-out-of-view-expected.txt: Added.


Canonical link: https://commits.webkit.org/131847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147120 268f45cc-cd09-0410-ab3c-d52691b4dbfc